=== 0.3.0 / 2011-01-26

* Reworked type and constraint handling, which should result in a large number of bug fixes, especially related to schema dumps.
* Experimental support for complex spatial queries. (Requires Arel 2.1, which is expected to be released with Rails 3.1.)
* The path to the Railtie is now different (see the README), though a compatibility wrapper has been left in the old location.
* Reorganized the code a bit for better clarity.

=== 0.2.3 / 2011-01-06

* Many of ActiveRecord's rake tasks weren't working because they need to know about every adapter explicitly. I hesitate to call this "fixed" since I see it as a problem in ActiveRecord, but we now at least have a workaround so the rake tasks will run properly. (Reported by Tad Thorley.)

=== 0.2.2 / 2010-12-27

* Support for basic spatial equality queries. e.g. constructs such as:
    MyClass.where(:geom_column => factory.point(1, 2))
    MyClass.where(:geom_column => 'POINT(1 2)')

=== 0.2.1 / 2010-12-15

* Provides meta-information to RGeo 0.2.2 or later to support access to SpatiaLite's spatial reference system table.

=== 0.2.0 / 2010-12-07

* Initial public alpha release. Spun activerecord-spatialite-adapter off from the core rgeo gem.
* You can now set the factory for a specific column by name.
* Dropping a table that had spatial indexes tied to it didn't remove the index tables. Fixed.
* You can now remove spatial indexes by name.

For earlier history, see the History file for the rgeo gem.