@@ -2,6 +2,7 @@
 
 * Reworked type and constraint handling, which should result in a large number of bug fixes, especially related to schema dumps.
 * Experimental support for complex spatial queries. (Requires Arel 2.1, which is expected to be released with Rails 3.1.)
+* API CHANGE: The indexes method now returns all indexes including spatial indexes; removed the separate spatial_indexes method.
 * The path to the Railtie is now different (see the README), though a compatibility wrapper has been left in the old location.
 * Reorganized the code a bit for better clarity.
 
